[package]
authors = ["Jesus Guzman, Jr. <jesus@marzipan.club>"]
description = "A simple serial terminal."
edition = "2021"
name = "miniterm"
publish = false
version = "0.1.0"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
color-backtrace = "0.5.1"
ctrlc = "3.2.1"
serialport = {version = "4.0.1", default-features = false}
termion = "1.5.6"
